--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,6 +5,7 @@
 <body>
   <div id="app"></div>
   <link rel="stylesheet" type="text/css" href="main.css"/>
+  <link rel="icon" type="image/png" href="images/marama-flavicon.png">
   <script src="/bundle.js"></script>
 </body>
 </html>
