--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="main.css"/>
-    <link rel="icon" type="image/png" href="images/marama-flavicon.png">
+    <link rel="icon" type="image/x-icon" href="images/marama-flavicon.ico">
   <title>Marama</title>
 </head>
 <body>
