--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+  <link rel="stylesheet" type="text/css" href="/main.css"/>
   <script src="/bundle.js"></script>
 </body>
 </html>
