--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/nav.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/home.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/interest.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/type.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/study.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/grants.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/jobs.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/support.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/about.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/contact.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/nointerests.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/footer.css"/>
     <link rel="icon" type="image/x-icon" href="images/marama-flavicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
   <title>Mārama</title>
