--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/css/support.css"/>
     <link rel="stylesheet" type="text/css" href="/css/about.css"/>
     <link rel="stylesheet" type="text/css" href="/css/contact.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/register.css"/>
     <link rel="stylesheet" type="text/css" href="/css/nointerests.css"/>
     <link rel="stylesheet" type="text/css" href="/css/footer.css"/>
     <link rel="icon" type="image/x-icon" href="images/marama-flavicon.ico">
