signin component and routes done

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="/css/nav.css"/>
     <link rel="stylesheet" type="text/css" href="/css/home.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/interest.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/type.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/study.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/grants.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/jobs.css"/>
     <link rel="stylesheet" type="text/css" href="/css/support.css"/>
     <link rel="stylesheet" type="text/css" href="/css/about.css"/>
     <link rel="stylesheet" type="text/css" href="/css/contact.css"/>
     <link rel="stylesheet" type="text/css" href="/css/register.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/signin.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/grants.css"/>
     <link rel="stylesheet" type="text/css" href="/css/nointerests.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/study.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/jobs.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/type.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/interest.css"/>
     <link rel="stylesheet" type="text/css" href="/css/footer.css"/>
     <link rel="icon" type="image/x-icon" href="images/marama-flavicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
